@@ -1,8 +1,15 @@
 2009-02-22  Sergii Stoian <stoyan255@gmail.com>
 
+	* Framework/PCSaveModifiedFiles.m: Change to more generic
+	implementation. PCRunSaveModifiedFilesPanel() implemented.
+	* Framework/PCProjectBuilder.m:
+	(prebuildCheck): Use PCRunSaveModifiedFiles().
+
+2009-02-22  Sergii Stoian <stoyan255@gmail.com>
+
 	* Framework/PCSaveModifiedFiles.m:
 	* Framework/English.lproj/SaveModifiedFiles.gorm:
-	* Headers/ProjectCenter/PCSaveModifiedFiles.m:
+	* Headers/ProjectCenter/PCSaveModifiedFiles.h:
 	Add initial implementation of "Save Modified Files" panel.
 	* Framework/PCProjectBuilder.m:
 	(prebuildCheck): Use PCSaveModifiedFiles.
